enhance memory usage